UtahLiveDataTest/src/objects/ReviewStepTemplate__c.object
<CustomObject>
    <description>[Business] Template defined for a Step Review , Previous Name (Review Step Template)</description>
    <fields>
        <fullName>AdminPageLayout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admin Page Layout (Obsolete)</label>
        <referenceTo>GNT__PageLayoutConfig__c</referenceTo>
        <relationshipName>Review_Step_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Announcement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link the announcement record.</description>
        <label>Announcement</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipName>ReviewStepTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApplicationAssignment__c</fullName>
        <inlineHelpText>How the Applications needs to be divided between Panels/Reviewers</inlineHelpText>
        <label>Application Assignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto-Assign to All</fullName>
                    <default>true</default>
                    <label>Auto-Assign to All</label>
                </value>
                <value>
                    <fullName>Auto-Divide Equally</fullName>
                </value>
                <value>
                    <fullName>Manual Assignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApprovalConfirmationFlexTableName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This table is used to render a table on the confirmation page for promote button from decisions tab</inlineHelpText>
        <label>Approval Confirmation Flex Table Name</label>
        <referenceTo>GNT__DataTableConfig__c</referenceTo>
        <relationshipName>Approval_Confirmation_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApprovalConfirmationLayout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This layout is used to render the confirmation page for promote button from decisions tab</inlineHelpText>
        <label>Approval Confirmation Layout (Obsolete)</label>
        <referenceTo>GNT__PageTemplate__c</referenceTo>
        <relationshipName>Approval_Confirmation_Layout</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApprovalEmailTemplate__c</fullName>
        <inlineHelpText>This field is used to store the developer name of the email template to notify the Applicant upon Approval/Promotion</inlineHelpText>
        <label>Approval Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedReviewerCount__c</fullName>
        <label>Assigned Reviewer Count</label>
        <summarizedField>ReviewPanelTemplate__c.ReviewersCount__c</summarizedField>
        <summaryForeignKey>ReviewPanelTemplate__c.ReviewStepTemplate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AssignedReviewer__c</fullName>
        <formula>IF(AssignedReviewerCount__c &gt; 0, &quot;Yes&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Reviewers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedReviewers__c</fullName>
        <label>Assigned Reviewers</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClonedFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cloned From</label>
        <referenceTo>ReviewStepTemplate__c</referenceTo>
        <relationshipName>Review_Step_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomAppName__c</fullName>
        <label>Custom App Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>StateasGrantee</fullName>
                </value>
                <value>
                    <fullName>StateasGrantor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DefaultStep__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this Review step is a default step</description>
        <inlineHelpText>If this Review step is a default step</inlineHelpText>
        <label>Default Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExecutiveApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Review_Steps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HideAnnouncementEdit__c</fullName>
        <formula>NOT(OR(ISPICKVAL(Announcement__r.Status__c,&apos;Created&apos;), 
ISPICKVAL(Announcement__r.Status__c,&apos;Reviewed&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Announcement Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HidePanelBtn__c</fullName>
        <formula>ISPICKVAL(MultiplePanelsRequired__c,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Panel Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideProgramEdit__c</fullName>
        <formula>NOT(ISPICKVAL(Program__r.Status__c,&apos;Created&apos;)) || Name=&apos;Funding Decision Memo&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Program Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideView__c</fullName>
        <formula>IF(Name=&apos;Funding Decision Memo&apos;,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideView</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InstructionsToReviewers__c</fullName>
        <label>Instructions to Reviewers (Obsolete)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsStepMandatory__c</fullName>
        <formula>IF(ISPICKVAL(IsStepOptional__c,&apos;Optional&apos;),&apos;Optional&apos;,&apos;Mandatory&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Step Mandatory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsStepOptional__c</fullName>
        <inlineHelpText>Is this Step Required for all Announcements under this program?</inlineHelpText>
        <label>Is this step Mandatory/Optional?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                    <default>true</default>
                    <label>Mandatory</label>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsStepRequiredInApp__c</fullName>
        <formula>ISPICKVAL(IsStepRequired__c,&apos;Yes&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is this Step Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsStepRequired__c</fullName>
        <inlineHelpText>Please select if Step is Required in Application or not</inlineHelpText>
        <label>Is the Step Required in Application?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaximumReviewers__c</fullName>
        <label>Maximum Reviewers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinimumReviewers__c</fullName>
        <label>Minimum Reviewers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MultiplePanelsRequired__c</fullName>
        <inlineHelpText>Does it Require more than 1 Panels for this Review Step? 1 Panel is added by default</inlineHelpText>
        <label>Does it Require Multiple Review Panels</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberOfReviewPanels__c</fullName>
        <label>Number of Review Panels</label>
        <summaryForeignKey>ReviewPanelTemplate__c.ReviewStepTemplate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PanelHeadAssignNotificationTemplate__c</fullName>
        <label>Panel Head Assign Notification Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreventDuplicateReviewers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevent Duplicate Reviewers Across Panels</description>
        <label>Prevent Duplicate Reviewers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreviewForm__c</fullName>
        <label>Preview Form</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PreviewId__c</fullName>
        <label>PreviewId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviewLink__c</fullName>
        <formula>IF(ISBLANK(PreviewForm__c), &apos;No Link&apos;, HYPERLINK( PreviewForm__c, &apos;Preview&apos;, &apos;_Blank&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to program record.</description>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipName>ReviewStepTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RejectionConfirmationFlexTableName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This flex table is used to render the table on confirmation page for reject button from decisions tab</inlineHelpText>
        <label>Rejection Confirmation Flex Table Name</label>
        <referenceTo>GNT__DataTableConfig__c</referenceTo>
        <relationshipName>Review_Step_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RejectionConfirmationLayout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This layout is used to render the confirmation page for reject button from decisions tab</inlineHelpText>
        <label>Rejection Confirmation Layout (Obsolete)</label>
        <referenceTo>GNT__PageTemplate__c</referenceTo>
        <relationshipName>Rejection_Confirmation_Layout</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RejectionEmailTemplate__c</fullName>
        <inlineHelpText>This field is used to store the developer name of the email template to notify the Applicant upon Rejection</inlineHelpText>
        <label>Rejection Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequiredStep__c</fullName>
        <formula>NOT(ISPICKVAL( IsStepOptional__c,&apos;Optional&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Optional Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReviewFormConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Review Form Config</label>
        <referenceTo>GNT__PageTemplate__c</referenceTo>
        <relationshipName>Review_Step_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewLevelAcceptance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Level Acceptance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReviewPackage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Review Package</label>
        <referenceTo>GNT__Package__c</referenceTo>
        <relationshipName>ReviewStepTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewStepLayout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This layout is used to render the Review step view page</inlineHelpText>
        <label>Review Step Layout</label>
        <referenceTo>GNT__PageTemplate__c</referenceTo>
        <relationshipName>Review_Step_Layout</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewTypeName__c</fullName>
        <label>ReviewTypeName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewerConfirmationRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the system should show the Confirmation page to each Reviewer for this Review Step?</description>
        <inlineHelpText>If the system should show the Confirmation page to each Reviewer for this Review Step?</inlineHelpText>
        <label>Reviewer Confirmation Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StepNumber__c</fullName>
        <label>Step Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <label>User Type (Obsolete)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Review Step Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Review Step Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Review Step Templates</pluralLabel>
    <recordTypes>
        <fullName>Application</fullName>
        <active>true</active>
        <label>Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Preapplication</fullName>
        <active>true</active>
        <label>Pre-Application</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>